Background is black and background function has been removed. Not a perfect solution to images having black backgrounds by default on imgur, but at least it is now clear to the user.

--- a/css/literallycanvas.css
+++ b/css/literallycanvas.css
@@ -84,6 +84,8 @@
 .literally .lc-drawing {
     right: 0;
     left: 122px;
+    width: 254px;
+    height: 354px;
     cursor: default
 }
 .literally .lc-drawing>* {
