Cleaning up the interface a bit.

--- a/css/literallycanvas.css
+++ b/css/literallycanvas.css
@@ -335,6 +335,10 @@
     right: 0;
     left: 61px
 }
+
+#sprite{
+    display: none;
+}
 .literally .lc-options .lc-font-settings {
     height: 30px;
     line-height: 31px;
