One button two stones. Or something.

--- a/css/literallycanvas.css
+++ b/css/literallycanvas.css
@@ -339,6 +339,11 @@
 #sprite{
     display: none;
 }
+
+#downloadHiddenButton{
+    display: none;
+}
+
 .literally .lc-options .lc-font-settings {
     height: 30px;
     line-height: 31px;
