--- a/css/literallycanvas.css
+++ b/css/literallycanvas.css
@@ -327,6 +327,10 @@
     float: none;
     text-align: center
 }
+.imgur-submit{
+    padding-top: 10px;
+    margin-left: 10px;
+}
 .literally .polygon-toolbar {
     border-top: 1px solid #555
 }
@@ -349,6 +353,13 @@
     line-height: 31px;
     padding-left: 4px;
     background-color: #f5f5f5
+}
+
+.cardNamer {
+    height:40px;
+    background-color: grey;
+    width: 375px;
+    
 }
 .literally .lc-options .lc-font-settings input {
     margin: 0 0.5em 0 0
