Color tweak to match site.

--- a/css/literallycanvas.css
+++ b/css/literallycanvas.css
@@ -79,7 +79,7 @@
     bottom: 0;
     width: 61px;
     margin-top: 0px;
-    background-color: #BF4D28;
+    background-color: #D76B00;
 }
 .literally .lc-drawing {
     right: 0;
