--- a/css/literallycanvas.css
+++ b/css/literallycanvas.css
@@ -1,4 +1,8 @@
 /*# sourceMappingURL=literallycanvas.css.map */
+.containsAll{
+    width:100%;
+}
+
 ul {
     list-style:none;
     padding-top:0;
